[package]
name = "dbgbb"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A framework for analyzing debugging data in a notebook"
repository = "https://github.com/YShoji-HEP/dbgbb"
readme = "README.md"
keywords = ["data_structures", "macro", "object_storage", "debugging"]
categories = ["visualization", "encoding", "development-tools::debugging", "development-tools::testing"]

[dependencies]
array-object = "0.2.1"
bulletin-board-common = "0.3.1"

ciborium = "=0.2.2"
serde_bytes = "0.11.15"
num-complex = "0.4.6"
ndarray_15 = { package = "ndarray", version = "0.15.6", optional = true }
ndarray_16 = { package = "ndarray", version = "0.16.1", optional = true }
nalgebra = { version = "0.33.2", optional = true }

[features]
default = []
unix = []
no_compression = []
ndarray_15 = ["dep:ndarray_15", "array-object/ndarray_15"]
ndarray_16 = ["dep:ndarray_16", "array-object/ndarray_16"]
nalgebra = ["dep:nalgebra", "array-object/nalgebra"]