[package]
name = "dbgbb"
version = "0.3.3"
edition = "2024"
license = "Apache-2.0"
description = "A framework for analyzing debugging data in a Mathematica/Jupyter notebook"
repository = "https://github.com/YShoji-HEP/dbgbb"
readme = "README.md"
keywords = ["data_structures", "macro", "object_storage", "debugging"]
categories = ["visualization", "encoding", "development-tools::debugging", "development-tools::testing"]

[dependencies]
array-object = "0.2.3"
bulletin-board-common = "0.3.2"

ciborium = "=0.2.2"
serde_bytes = "0.11.17"
num-complex = "0.4.6"
ndarray_15 = { package = "ndarray", version = "0.15.6", optional = true }
ndarray_16 = { package = "ndarray", version = "0.16.1", optional = true }
nalgebra = { version = "0.34.0", optional = true }

[features]
default = []
unix = []
no_compression = []
ndarray_15 = ["dep:ndarray_15", "array-object/ndarray_15"]
ndarray_16 = ["dep:ndarray_16", "array-object/ndarray_16"]
nalgebra = ["dep:nalgebra", "array-object/nalgebra"]